[gd_scene load_steps=9 format=3 uid="uid://caxgxsllvf6o7"]

[ext_resource type="Script" uid="uid://bj6iso0uxxo5y" path="res://scripts/levels_menu.gd" id="1_r3otx"]
[ext_resource type="Texture2D" uid="uid://bh8mlwymfrbeb" path="res://assets/newupgrademenubackground.png" id="2_grwcp"]
[ext_resource type="Texture2D" uid="uid://t886of4uncmn" path="res://assets/fancy_ahh_panel.png" id="3_5vuwt"]
[ext_resource type="Script" uid="uid://dukmcm7byat27" path="res://scripts/button.gd" id="4_250ps"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5vuwt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_250ps"]
bg_color = Color(0.509804, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gkdn"]
bg_color = Color(0.470588, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc0ai"]
bg_color = Color(0.592448, 2.20198e-06, 4.33177e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="LevelsMenu" type="Node2D"]
script = ExtResource("1_r3otx")

[node name="BackgroundImage" type="TextureRect" parent="."]
offset_right = 1923.0
offset_bottom = 1079.0
texture = ExtResource("2_grwcp")

[node name="FancyAhh" type="TextureRect" parent="."]
offset_left = 35.0
offset_top = -130.0
offset_right = 1461.0
offset_bottom = 1296.0
scale = Vector2(1.2696, 0.948643)
texture = ExtResource("3_5vuwt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1924.0
offset_bottom = 1087.0

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Control"]
layout_mode = 2
offset_left = 799.0
offset_top = 45.0
offset_right = 1143.0
offset_bottom = 129.0
theme_override_font_sizes/font_size = 61
text = "Select Level"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Control2"]
layout_mode = 0
offset_left = 287.0
offset_top = 225.0
offset_right = 1717.0
offset_bottom = 895.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 40
columns = 5

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control3"]
layout_mode = 2
offset_left = 67.0
offset_top = 946.0
offset_right = 1865.0
offset_bottom = 1044.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/Control3/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Control3/HBoxContainer/Control"]
layout_mode = 2
offset_left = -204.0
offset_top = 47.0
offset_right = -116.0
offset_bottom = 95.0
text = "◀"

[node name="Control2" type="Control" parent="VBoxContainer/Control3/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Control3/HBoxContainer/Control2"]
layout_mode = 2
offset_left = -97.0
offset_top = 40.0
offset_right = 92.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 41
text = "Page x / 5"

[node name="Control3" type="Control" parent="VBoxContainer/Control3/HBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/Control3/HBoxContainer/Control3"]
layout_mode = 2
offset_left = 121.0
offset_top = 44.0
offset_right = 208.0
offset_bottom = 94.0
text = "▶"

[node name="Button" type="Button" parent="."]
offset_left = 60.0
offset_top = 40.0
offset_right = 168.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_5vuwt")
theme_override_styles/hover = SubResource("StyleBoxFlat_250ps")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8gkdn")
theme_override_styles/normal = SubResource("StyleBoxFlat_xc0ai")
text = "X"
script = ExtResource("4_250ps")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
